--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 
 <body>
-    <script src="/js/cookieManager.js"></script>
-    <script src="/js/languageManager.js"></script>
-    <script src="/js/langRedirector.js"></script>
+    <script src="/albwaan/js/cookieManager.js"></script>
+    <script src="/albwaan/js/languageManager.js"></script>
+    <script src="/albwaan/js/langRedirector.js"></script>
 </body>
 
 </html>
